--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -5,67 +5,19 @@
 html,body{
   margin: 0;
   padding: 0;
-
+overflow:hidden;
+background: #c0c0c0;
 }
 
-body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  width: 100vw;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-}
-
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
+.main{
+  height: calc(100vh - 36px);
+  width: calc(100vw - 16px);
+  padding: 8px;
 }
 
 
 @media screen and (orientation:portrait) {
   .main {
-    height: 100vh;
-    width: 100vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -87,8 +39,6 @@ a:hover {
 }
 @media screen and (orientation: landscape) {
   .main {
-    height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
