--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -7,6 +7,7 @@
       content="script-src 'self' 'unsafe-inline'"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/98.css">
     <title>DMHLPR</title>
   </head>
   <body>
