--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -14,8 +14,13 @@ background: #c0c0c0;
   width: calc(100vw - 16px);
   padding: 8px;
 }
-
-
+.sunken-panel{
+  margin:8px;
+}
+.map>canvas{
+width:100%;
+height:100%;
+}
 @media screen and (orientation:portrait) {
   .main {
     display: grid;
@@ -75,3 +80,8 @@ background: #c0c0c0;
   }
 }
 
+#dice-canvas,.dice-box-canvas, pre{
+  width:100%;
+  height:100%;
+
+}
