--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline'"
+      content="worker-src 'self' blob:; script-src 'self' 'unsafe-inline';"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <title>DMHLPR</title>
   </head>
   <body>
+
     <div id="root"></div>
   </body>
 </html>
